--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,20 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Robustness and Generalization via Generative Adversarial Training"
 collection: talks
-type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+type: "Tutorial"
+permalink: /talks/2024-03-09-GAT
+venue: "University of Tehran, Trustworthy AI course"
+date: 2024-03-09
+location: "Tehran, Iran"
 ---
+In the Trustworthy AI course, I was invited as a guest instructor to present the "GAT" paper after completing the initial sections on generalization and robustness. The objective was to enhance students' understanding of these concepts by discussing a related research paper.
 
-This is a description of your talk, which is a markdown file that can be all markdown-ified like any other post. Yay markdown!
+**Presentation Focus:** Key points and concepts from the "GAT" paper, linking them to the course material on generalization and robustness.
+**Content:** Detailed explanation of the paper's methodology, experiments, and results. Emphasis on the most important definitions and concepts, including the basic related concepts.
+**Interactive Elements:** Engaged students through discussions and Q&A sessions, ensuring a thorough understanding of the paper's contributions.
+**Conclusion:** Summarized the experiments and results, discussed potential future works, and provided an insightful perspective based on class discussions.
+
+**Links:**
+[GAT Paper](https://openaccess.thecvf.com/content/ICCV2021/papers/Poursaeed_Robustness_and_Generalization_via_Generative_Adversarial_Training_ICCV_2021_paper.pdf)
+[Presentation Slides](https://docs.google.com/presentation/d/1dHhmcFHNC2wPwIkAO_vtOeYV9w7RCPGqSs0184gMyXg/edit?usp=sharing)
+[Recorded Session (Persian)](https://t.me/TrustworthyAI_UT/123)
